@@ -9735,6 +9735,10 @@
       <text>let chummer decide</text>
     </string>
     <string>
+      <key>String_Chummy</key>
+      <text>Chummy</text>
+    </string>
+    <string>
       <key>Chummy_Intro</key>
       <text>Hi! I'm Chummy, the Chummer AI Assistant! I've got plenty of helpful tips and advice about your characters!</text>
     </string>
